--- a/Utils/pom.xml
+++ b/Utils/pom.xml
@@ -35,6 +35,11 @@
             <artifactId>language-detector</artifactId>
             <version>0.6</version>
         </dependency>
+        <dependency>
+            <groupId>com.opencsv</groupId>
+            <artifactId>opencsv</artifactId>
+            <version>5.1</version>
+        </dependency>
     </dependencies>
 
     <properties>
