--- a/Utils/pom.xml
+++ b/Utils/pom.xml
@@ -36,6 +36,11 @@
             <version>0.6</version>
         </dependency>
         <dependency>
+            <groupId>org.nibor.autolink</groupId>
+            <artifactId>autolink</artifactId>
+            <version>0.10.0</version>
+        </dependency>
+        <dependency>
             <groupId>com.opencsv</groupId>
             <artifactId>opencsv</artifactId>
             <version>5.1</version>
