--- a/Pipeline/pom.xml
+++ b/Pipeline/pom.xml
@@ -68,6 +68,11 @@
             <version>5.3.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>MultilingualSupport</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 
     <properties>
