--- a/Tagger/pom.xml
+++ b/Tagger/pom.xml
@@ -53,6 +53,11 @@
             <artifactId>Tokenizer</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>MultilingualSupport</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 
     <properties>
