--- a/Tokenizer/pom.xml
+++ b/Tokenizer/pom.xml
@@ -43,6 +43,12 @@
             <version>5.3.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>MultilingualSupport</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
 
     <properties>
